--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.31)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.31\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.32)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.32\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.31)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.31\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.32)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.32\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3624,6 +3624,10 @@ msgctxt "admin.Settings_Advanced_Common"
 msgid "AsyncUseCmptNbrChk"
 msgstr ""
 
+msgctxt "admin.Settings_Advanced_Common"
+msgid "AsyncSmpOptChk"
+msgstr ""
+
 # Using external Cron requires additional setup. Please, read related %1$sdocumentation%2$s.
 #, php-format
 msgctxt "admin.Settings_Advanced_Common"
@@ -3724,6 +3728,7 @@ msgctxt "admin.Settings_Advanced_Test"
 msgid "TestContExtraChk_%1$s"
 msgstr ""
 
+# Constant 'NONCE_SALT' or 'SERAPH_ACCEL_SALT' is not defined in 'wp-config.php' file. Pls, check this file for the missing conatant. It can be caused by some security plugin configuration.
 msgctxt "admin.Notice"
 msgid "WpSaltNotDefined"
 msgstr ""
