--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.32)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.32\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.33)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.33\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.32)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.32\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.33)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.33\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3061,6 +3061,10 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "GrnshftPbAosAniChk"
 msgstr ""
 
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "XstrThSwprChk"
+msgstr ""
+
 # General
 msgctxt "admin.Settings_Scripts_Common"
 msgid "Lbl"
@@ -3624,6 +3628,7 @@ msgctxt "admin.Settings_Advanced_Common"
 msgid "AsyncUseCmptNbrChk"
 msgstr ""
 
+# Simple thread of optimization
 msgctxt "admin.Settings_Advanced_Common"
 msgid "AsyncSmpOptChk"
 msgstr ""
