--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.33)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.33\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.34)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.34\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.33)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.33\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.34)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.34\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -954,6 +954,11 @@ msgstr ""
 # Desktop
 msgctxt "admin.Manage_Queue"
 msgid "ViewComonTxt"
+msgstr ""
+
+# All locations
+msgctxt "admin.Manage_Operate"
+msgid "AllGeoLocations"
 msgstr ""
 
 # Such images' compression is not supported on current hosting configuration
@@ -2886,6 +2891,10 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "WooOuPrdGalChk"
 msgstr ""
 
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "WooGsPrdGalChk"
+msgstr ""
+
 # JS from WooCommerce
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "WooJsChk"
@@ -3061,6 +3070,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "GrnshftPbAosAniChk"
 msgstr ""
 
+# Swiper Slider from XStore theme
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "XstrThSwprChk"
 msgstr ""
