--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.39)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.39\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.40)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.40\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.39)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.39\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.40)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.40\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1787,6 +1787,7 @@ msgctxt "admin.Settings_Views_Item"
 msgid "EnabledLbl"
 msgstr ""
 
+# Only for fresh parts
 msgctxt "admin.Settings_Views_Item"
 msgid "FrLbl"
 msgstr ""
@@ -3097,6 +3098,10 @@ msgctxt "admin.Settings_Scripts_Skip"
 msgid "Lbl"
 msgstr ""
 
+msgctxt "admin.Settings_Scripts_Skip"
+msgid "BadChk"
+msgstr ""
+
 # Treat as scripts
 msgctxt "admin.Settings_Scripts_Other"
 msgid "Lbl"
@@ -3240,6 +3245,10 @@ msgstr ""
 # Not needed
 msgctxt "admin.Settings_Styles_Skip"
 msgid "Lbl"
+msgstr ""
+
+msgctxt "admin.Settings_Styles_Skip"
+msgid "BadChk"
 msgstr ""
 
 # Corrections for lazy loading scripts
