--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.40)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.40\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.41)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.41\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.40)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.40\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.41)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.41\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1277,6 +1277,10 @@ msgstr ""
 # Tables of TablePress
 msgctxt "admin.Settings_Cache_Revalidate_UpdGlobs"
 msgid "TblPrssChk"
+msgstr ""
+
+msgctxt "admin.Settings_Cache_Revalidate_UpdGlobs"
+msgid "FlntFrmChk"
 msgstr ""
 
 # All update dependencies
@@ -3098,6 +3102,7 @@ msgctxt "admin.Settings_Scripts_Skip"
 msgid "Lbl"
 msgstr ""
 
+# Unavailable
 msgctxt "admin.Settings_Scripts_Skip"
 msgid "BadChk"
 msgstr ""
@@ -3247,6 +3252,7 @@ msgctxt "admin.Settings_Styles_Skip"
 msgid "Lbl"
 msgstr ""
 
+# Unavailable
 msgctxt "admin.Settings_Styles_Skip"
 msgid "BadChk"
 msgstr ""
