--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.44)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.44\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.28.11)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.28.11\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.44)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.44\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.28.11)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.28.11\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -744,6 +744,11 @@ msgstr ""
 # All locations
 msgctxt "admin.Manage_Operate"
 msgid "AllGeoLocations"
+msgstr ""
+
+# All languages
+msgctxt "admin.Manage_Operate"
+msgid "AllLangs"
 msgstr ""
 
 # Such images' compression is not supported on current hosting configuration
@@ -2057,6 +2062,11 @@ msgctxt "admin.Settings_Html_RandCorr"
 msgid "WooPrdQntChk"
 msgstr ""
 
+# Anti-Spam by CleanTalk
+msgctxt "admin.Settings_Html_RandCorr"
+msgid "AsClnTlkChk"
+msgstr ""
+
 # Smooth appearing
 msgctxt "admin.Settings_Images_Lazy"
 msgid "SmoothAppearChk"
@@ -2080,6 +2090,11 @@ msgstr ""
 # Storing as attributes
 msgctxt "admin.Settings_Html_Lazy"
 msgid "AsPropChk"
+msgstr ""
+
+# Excludes:
+msgctxt "admin.Settings_Common"
+msgid "ExclsLbl"
 msgstr ""
 
 # General
@@ -2117,11 +2132,6 @@ msgstr ""
 # Alternative redirection
 msgctxt "admin.Settings_Images_Compr"
 msgid "RedirOwnChk"
-msgstr ""
-
-# Excludes:
-msgctxt "admin.Settings_Common"
-msgid "ExclsLbl"
 msgstr ""
 
 # Elements' XPath selectors, each on newline
@@ -2388,6 +2398,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtEaelCntdwnChk"
 msgstr ""
 
+# Funfact Counter Widget of Mascot Core Plugin for Elementor
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtTmFnfctCntrChk"
 msgstr ""
@@ -2542,6 +2553,11 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "WooPrdGallFltsmThmbsChk"
 msgstr ""
 
+# Product gallery images thumbnails of WooCommerce from Carafity theme
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "WooPrdGallCrftThmbsChk"
+msgstr ""
+
 # Thumbnail of tagDiv
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "TdThumbCssChk"
@@ -2627,9 +2643,14 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviSldChk"
 msgstr ""
 
-# Video-box from Divi
+# Video-box from Divi (legacy)
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviVidBoxChk"
+msgstr ""
+
+# Video-box from Divi
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "DiviVidBox2Chk"
 msgstr ""
 
 # Video-background from Divi
@@ -2932,6 +2953,72 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "XstrThSwprChk"
 msgstr ""
 
+# Swiper Slider from Breakdance Elements
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "BdeSwprChk"
+msgstr ""
+
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "BdeTabsChk"
+msgstr ""
+
+# Content Slider of BoldThemes
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "BtCntSldChk"
+msgstr ""
+
+# Menu of BoldThemes
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "BtMenuChk"
+msgstr ""
+
+# FOX - Currency Switcher
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "WcsChk"
+msgstr ""
+
+# Slick Slider generic
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "SlckGenChk"
+msgstr ""
+
+# CSS selector
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "SelCssPhlr"
+msgstr ""
+
+# Arrows
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "ArrowsChk"
+msgstr ""
+
+# Dots
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "DotsChk"
+msgstr ""
+
+# Infinite
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "InfiniteChk"
+msgstr ""
+
+# Centered
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "CenterModeChk"
+msgstr ""
+
+# %1$s slides to show
+#, php-format
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "SlidesToShow_%1$s"
+msgstr ""
+
+# %1$s slides to scroll
+#, php-format
+msgctxt "admin.Settings_Frames_ContParts_SlckGen_Item"
+msgid "SlidesToScroll_%1$s"
+msgstr ""
+
 # General
 msgctxt "admin.Settings_Scripts_Common"
 msgid "Lbl"
@@ -2992,6 +3079,11 @@ msgstr ""
 # Group and combine non-critical
 msgctxt "admin.Settings_Scripts_Common"
 msgid "GroupNonCritChk"
+msgstr ""
+
+# Catch errors to avoid execution breaking
+msgctxt "admin.Settings_Scripts_Common"
+msgid "GroupTrCChk"
 msgstr ""
 
 # Modules
