--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.28.11)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.28.11\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.28.12)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.28.12\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.28.11)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.28.11\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.28.12)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.28.12\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2698,6 +2698,10 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviHdrChk"
 msgstr ""
 
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "DiviCntdwnTmrChk"
+msgstr ""
+
 # Animation of Bricks
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "BrcksAniChk"
@@ -2958,6 +2962,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "BdeSwprChk"
 msgstr ""
 
+# Tabs from Breakdance Elements
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "BdeTabsChk"
 msgstr ""
@@ -2975,6 +2980,11 @@ msgstr ""
 # FOX - Currency Switcher
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "WcsChk"
+msgstr ""
+
+# Animation of TPGB
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "TpgbAniChk"
 msgstr ""
 
 # Slick Slider generic
